force-app/main/default/objects/Account/fields/Active_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Active_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Supplier</label>
    <type>Checkbox</type>
</CustomField>