force-app/main/default/objects/Account/fields/Default_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_Delivery_Address__c</fullName>
    <label>Default Delivery Address</label>
    <type>TextArea</type>
</CustomField>