force-app/main/default/objects/Account/fields/Default_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Lead_Time_Days__c</fullName>
    <label>Default Lead Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>