force-app/main/default/objects/Account/fields/Loyalty_Points_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Balance__c</fullName>
    <label>Loyalty Points Balance</label>
    <summarizedField>Loyalty_Point_Transaction__c.Points__c</summarizedField>
    <summaryForeignKey>Loyalty_Point_Transaction__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>