force-app/main/default/objects/Account/recordTypes/Bulk_Buyer.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Buyer</fullName>
    <active>true</active>
    <description>Customers who buy in bulk.</description>
    <label>Bulk Buyer</label>
</RecordType>