force-app/main/default/objects/Account/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Raw material supplier</description>
    <label>Supplier</label>
</RecordType>